# fixed-slice-deque

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: drain_filter.rs  lib.rs
