[package]
name = "fixed-slice-deque"
version = "0.1.0-beta5"
authors = ["danielsanchezq <sanchez.quiros.daniel@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A fixed size deque implementation"
documentation = "https://docs.rs/crate/fixed-slice-deque/"
homepage = "https://github.com/danielsanchezq/fixed-slice-deque"
repository = "https://github.com/danielsanchezq/fixed-slice-deque"
keywords = [
    "deque",
    "fixed",
    "circular",
    "ring",
    "buffer"
]
categories = ["data-structures"]
exclude = [
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]